--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "formik": "^2.4.6",
     "lucide-react": "^0.545.0",
     "next": "15.5.4",
     "react": "19.1.0",
